# COMP-8552-Project

./: CMakeLists.txt  README.md
animations/: cat_animations.xml  saw_blade_animations.xml
asset/: Font.tsx  Level_1.tmx  Level_2.tmx  Level_3.tmx  Level_4.tmx  Main_Menu.tmx  Reflex.tiled-session  Reflex.tmx  Sawblade.tsx
asset/lecture_assets/: map.tmx
asset/levels/: Environment.tsx  Level_1.5.tmx  Level_1.tmx  Level_3.tmx  Level_4.tmx  Level_5.tmx  Main_Menu.tmx
dev/sdl3 3.3.2/lib/cmake/SDL3/: SDL3Config.cmake
dev/sdl3 3.3.2/lib/pkgconfig/: sdl3.pc
dev/sdl3_image/lib/cmake/SDL3_image/: SDL3_image-shared-targets.cmake
dev/sdl3_ttf/lib/cmake/SDL3_ttf/: SDL3_ttf-shared-targets.cmake  SDL3_ttfConfig.cmake
level_data/: Level_1.5.json  Level_1.json  Level_2.json  Level_4.json  Level_5.json
src/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  World.cpp  main.cpp
src/config/: Config.h
src/ecs/: Component.h  ComponentType.h  Entity.h  EventManager.h  World.h
src/ecs/system/: AnimationClip.h  AnimationSystem.h  CameraSystem.h  ColliderDebugSystem.h  CollisionSystem.cpp  CollisionSystem.h  DestructionSystem.h  HUDSystem.h  HomingSystem.h  KeyboardInputSystem.h  LifetimeSystem.h  MouseInputSystem.cpp  MouseInputSystem.h  MovementSystem.h  PreRenderSystem.h  RenderSystem.h  SawBladeMovementSystem.h  SpawnTimerSystem.h  UIRenderSystem.h
src/ecs/system/player_mechanics/: ParrySystem.h
src/level/: LevelData.h  LevelLoader.h
src/level_data/: Level_1.json  Level_2.json  Level_3.json  Level_4.json  Level_5.json
src/manager/: AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  MainMenuScene.cpp  MainMenuScene.h  Scene.cpp  Scene.h  SceneManager.h  TextureManager.cpp  TextureManager.h
src/utils/: Collision.cpp  Collision.h  JsonLoader.cpp  JsonLoader.h  RenderUtils.h  Vector2D.cpp  Vector2D.h
user_data/: user_data.json
